//
// Copyright (C) 2019-2020 Vdaas.org Vald team ( kpango, rinx, kmrmt )
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package core;

option go_package = "github.com/vdaas/vald/apis/grpc/agent/core";
option java_multiple_files = true;
option java_package = "org.vdaas.vald.agent.core";
option java_outer_classname = "ValdAgent";

import "payload.proto";
import "google/api/annotations.proto";
import "pb/gql.proto";

service Agent {
  rpc CreateIndex(payload.Control.CreateIndexRequest) returns (payload.Empty) {
    option (google.api.http).get = "/index/create";
  }
  rpc SaveIndex(payload.Empty) returns (payload.Empty) {
    option (google.api.http).get = "/index/save";
  }
  rpc CreateAndSaveIndex(payload.Control.CreateIndexRequest)
      returns (payload.Empty) {
    option (google.api.http).get = "/index/createandsave";
  }
  rpc IndexInfo(payload.Empty) returns (payload.Info.Index.Count) {
    option (google.api.http).get = "/index/info";
  }
}
